# netbox-grafana-bridge

./: Dockerfile  app.py  config.py  docker-compose.yml  netbox_client.py  pyproject.toml  requirements.txt
netbox_grafana_bridge/: __init__.py  navigation.py  urls.py
netbox_grafana_bridge/forms/: __init__.py  forms.py
netbox_grafana_bridge/migrations/: 0001_initial.py
netbox_grafana_bridge/models/: __init__.py  config.py
netbox_grafana_bridge/templates/netbox_grafana_bridge/: config.html  config_edit.html  status.html
netbox_grafana_bridge/views/: __init__.py  config.py
